Fix: next button overlap

--- a/src/app/game/game-pick-difficulty/game-pick-difficulty.component.scss
+++ b/src/app/game/game-pick-difficulty/game-pick-difficulty.component.scss
@@ -65,7 +65,7 @@
   display: inline-flex;
   align-items: center;
   gap: 1.5rem;
-  margin: 10vh 20px 0 60px;
+  margin: 15vh 20px 0 60px;
 }
 
 #back-btn {
